[package]
name = "engine_gui"
version = "0.1.0"
authors = ["romptroll <romptroll@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine_core = {git = "https://github.com/romptroll/engine_core"}
engine_renderer = {git = "https://github.com/romptroll/engine_renderer", branch = "main"}
bus = "2.2.3"